--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,9 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('io.springfox:springfox-swagger2:2.1.2')
 	compile('io.springfox:springfox-swagger-ui:2.1.2')
-	compile("cglib:cglib-nodep:3.2.0")
+	compile('cglib:cglib-nodep:3.2.0')
+	compile('org.json:json:20160212')
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile("org.spockframework:spock-spring:1.0-groovy-2.4")
 	testCompile('org.springframework.cloud:spring-cloud-contract-wiremock')
