--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 	compile('io.springfox:springfox-swagger-ui:2.1.2')
 	compile('cglib:cglib-nodep:3.2.0')
 	compile('org.json:json:20160212')
+	compile('org.bouncycastle:bcprov-jdk15on:1.54')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile("org.spockframework:spock-spring:1.0-groovy-2.4")
