Added delegatedTransferNonce API support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-ethereum.node.url=http://54.194.239.231:8545
+ethereum.node.url=http://eth.euro2.ee:8545
 #sponsor.ethereum.address=0xdbf25a870895fe608f6ce5830d8c13a5598b060e
 sponsor.ethereum.address=0x31c0ec79c3b14ff86673d0fa92c260b42ff14437
 contract.ethereum.address=0x2FdAB8f12fA9Ad9Ad91fc55d52569AFc98Be9831
