--- a/build.gradle
+++ b/build.gradle
@@ -36,23 +36,26 @@ repositories {
 	mavenCentral()
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
+	maven { url "http://dl.bintray.com/ethereum/maven" }
 }
-
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
-	compile('org.springframework.boot:spring-boot-devtools')
-	compile('org.projectlombok:lombok')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-devtools')
+	compile('org.projectlombok:lombok')
 	compile('io.springfox:springfox-swagger2:2.1.2')
 	compile('io.springfox:springfox-swagger-ui:2.1.2')
 	compile('cglib:cglib-nodep:3.2.0')
 	compile('org.json:json:20160212')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.bouncycastle:bcprov-jdk15on:1.54')
 	compile('com.h2database:h2')
 	compile('org.apache.httpcomponents:httpclient:4.5.2')
+	compile('org.ethereum:ethereumj-core:1.1.0-RELEASE') {
+		exclude group: "org.slf4j", module: "slf4j-log4j12"
+	}
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile("org.spockframework:spock-spring:1.0-groovy-2.4")
@@ -64,7 +67,6 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-contract-dependencies:1.0.0.M1"
 	}
 }
-
 
 eclipse {
 	classpath {
