Using multiple contracts

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
 ethereum.node.url=http://localhost:8545
-sponsor.ethereum.address=0x65fa6548764C08C0DD77495B33ED302d0C212691
+#ethereum.node.url=http://eth.euro2.ee:8545
