--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 ethereum.node.url=http://eth.euro2.ee:8545
+
 #sponsor.ethereum.address=0xdbf25a870895fe608f6ce5830d8c13a5598b060e
 sponsor.ethereum.address=0x31c0ec79c3b14ff86673d0fa92c260b42ff14437
-contract.ethereum.address=0x7f99ACA8A0C23f107729aa9929D9Dc1481B087F6
-contract.ethereum.block=0x1E4D02
+
+contract.ethereum.address=0xB8E7245B42529B905a8909B8FD5fC690097e71f7
+contract.ethereum.block=0x24175F
+
 endpoints.enabled=false
