--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 ethereum.node.url=http://eth.euro2.ee:8545
 
 #sponsor.ethereum.address=0xdbf25a870895fe608f6ce5830d8c13a5598b060e
-sponsor.ethereum.address=0x31c0ec79c3b14ff86673d0fa92c260b42ff14437
+#sponsor.ethereum.address=0x31c0ec79c3b14ff86673d0fa92c260b42ff14437
+sponsor.ethereum.address=0x8664e7a68809238d8f8e78e4b7c723282533a787
 
 contract.ethereum.address=0xB8E7245B42529B905a8909B8FD5fC690097e71f7
 contract.ethereum.block=0x24175F
