New parity machine

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-ethereum.node.url=http://eth.euro2.ee:8545
+ethereum.node.url=http://big-parity.euro2.ee:8545
 
 #sponsor.ethereum.address=0xdbf25a870895fe608f6ce5830d8c13a5598b060e
 #sponsor.ethereum.address=0x31c0ec79c3b14ff86673d0fa92c260b42ff14437
