Added payouts to SEPA bank accounts.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ sponsor.ethereum.address=0x8664e7a68809238d8f8e78e4b7c723282533a787
 contract.ethereum.address=0xa10a263D4336E4466502b2889D27D04582a86663
 contract.ethereum.block=0x241B13
 
+email.user=euro20
+email.password=abc123
+
 endpoints.enabled=false
