--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ repositories {
 }
 
 dependencies {
+	compile('javax.mail:mail:1.4')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
