--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile("org.spockframework:spock-spring:1.0-groovy-2.4")
 	testCompile('org.springframework.cloud:spring-cloud-contract-wiremock')
+	testCompile('com.github.tomakehurst:wiremock-standalone:2.4.1')
 }
 
 dependencyManagement {
