Some more wiremock mappings

--- a/build.gradle
+++ b/build.gradle
@@ -77,3 +77,13 @@ eclipse {
 	}
 }
 
+test {
+	test {
+		testLogging {
+			events "passed", "skipped", "failed", "standardError"
+		}
+	}
+}
+
+test.dependsOn cleanTest
+
