--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ contract.ethereum.block=0x241B13
 
 email.user=euro20
 email.password=abc123
+email.bankinstruction.recipient=someone@example.org
+
+slack.webhook.bankinstruction.url=https://hooks.slack.com/services/ADDYOUROWNREALSLACKURL
 
 endpoints.enabled=false
