--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ dependencies {
 	compile('org.ethereum:ethereumj-core:1.1.0-RELEASE') {
 		exclude group: "org.slf4j", module: "slf4j-log4j12"
 	}
+	compile('com.google.protobuf:protobuf-java:3.2.0')
+	compile('com.googlecode.protobuf-java-format:protobuf-java-format:1.4')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile("org.spockframework:spock-spring:1.0-groovy-2.4")
