--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ ethereum.node.url=http://big-parity.euro2.ee:8545
 #sponsor.ethereum.address=0x31c0ec79c3b14ff86673d0fa92c260b42ff14437
 sponsor.ethereum.address=0x8664e7a68809238d8f8e78e4b7c723282533a787
 
+firebase.url=https://euro2-f4201.firebaseio.com/push
+firebase.super.key=THEFIREBASESUPERKEY
+
 contract.ethereum.address=0xa10a263D4336E4466502b2889D27D04582a86663
 contract.ethereum.block=0x241B13
 
