Remove push notification. These are now in client app via firebase.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,16 +4,13 @@ ethereum.node.url=http://big-parity.euro2.ee:8545
 #sponsor.ethereum.address=0x31c0ec79c3b14ff86673d0fa92c260b42ff14437
 sponsor.ethereum.address=0x8664e7a68809238d8f8e78e4b7c723282533a787
 
-firebase.url=https://euro2-f4201.firebaseio.com/push
-firebase.super.key=THEFIREBASESUPERKEY
-
 contract.ethereum.address=0xa10a263D4336E4466502b2889D27D04582a86663
 contract.ethereum.block=0x241B13
 
 email.user=euro20
-email.password=abc123
-email.bankinstruction.recipient=someone@example.org
+email.password=YqzyMqnXtkz8
+email.bankinstruction.recipient=kristoxz@yahoo.com
 
-slack.webhook.bankinstruction.url=https://hooks.slack.com/services/ADDYOUROWNREALSLACKURL
+slack.webhook.bankinstruction.url=https://hooks.slack.com/services/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
 
 endpoints.enabled=false
