--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,10 @@ dependencies {
     }
     compile('com.google.protobuf:protobuf-java:3.2.0')
     compile('com.googlecode.protobuf-java-format:protobuf-java-format:1.4')
+//    compile("org.flywaydb:flyway-core:4.2.0")
+//    compile "org.hibernate:hibernate-java8:5.1.0.Final"
+//    compile "mysql:mysql-connector-java:5.1.30"
+
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile("org.spockframework:spock-spring:1.0-groovy-2.4")
