add build artifact, add deploy commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,13 @@ jobs:
         
       # run tests!
       - run: gradle test
+      - run: gradle build
 
+      - add_ssh_keys:
+          fingerprints:
+            - "b5:55:0e:be:54:39:7c:8c:8e:8f:9b:8d:5a:a1:f0:75"
 
-
-
+      - deploy:
+          command: |
+            scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -r repo/wallet-server/build/libs ubuntu@wallet.euro2.ee:wallet-server/build/libs/
+            ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no ubuntu@wallet.euro2.ee:wallet/run-wallet-server.sh
