--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,9 +48,7 @@ jobs:
 
       - deploy:
           command: |
-            ls *
-            ls -Alh
             if [ "${CIRCLE_BRANCH}" == "master" -o "${CIRCLE_BRANCH}" == "circleci-integration"  ]; then
-              scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -r  ~/repo/wallet-server/build/libs ubuntu@wallet.euro2.ee:wallet-server/build/libs/
+              scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -r  build/libs ubuntu@wallet.euro2.ee:wallet-server/build/libs/
               ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no ubuntu@wallet.euro2.ee:wallet/run-wallet-server.sh
             fi
