Made gas price configurable in gwei and updated spring boot version

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,5 @@
 ethereum.node.url=http://localhost:8545
 #ethereum.node.url=http://eth.euro2.ee:8545
+#ethereum.node.url=http://big-parity.euro2.ee:8545
+
+fixed.gas.price.gwei=2
