--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ email.bankinstruction.recipient=kristoxz@yahoo.com
 slack.webhook.bankinstruction.url=https://hooks.slack.com/services/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
 
 endpoints.enabled=false
+
+fixed.gas.price.gwei=1
