run service via systemd

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,6 @@ jobs:
       - deploy:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" -o "${CIRCLE_BRANCH}" == "circleci-integration"  ]; then
-              scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -r  build/libs ubuntu@wallet.euro2.ee:wallet-server/build/libs/
-              ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no ubuntu@wallet.euro2.ee:wallet/run-wallet-server.sh
+              scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -r  build/libs ubuntu@wallet.euro2.ee:~/wallet-server/
+              ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no ubuntu@wallet.euro2.ee sudo systemctl status wallet-server
             fi
