--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,5 +50,5 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" -o "${CIRCLE_BRANCH}" == "circleci-integration"  ]; then
               scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -r  build/libs ubuntu@wallet.euro2.ee:~/wallet-server/
-              ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no ubuntu@wallet.euro2.ee sudo systemctl status wallet-server
+              ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no ubuntu@wallet.euro2.ee sudo systemctl restart wallet-server
             fi
