--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ repositories {
     maven { url "https://repo.spring.io/snapshot" }
     maven { url "https://repo.spring.io/milestone" }
     maven { url "http://dl.bintray.com/ethereum/maven" }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -49,7 +50,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-devtools')
-	compile('org.projectlombok:lombok')
+    compile 'org.projectlombok:lombok:1.16.4'
 	compile('io.springfox:springfox-swagger2:2.1.2')
 	compile('io.springfox:springfox-swagger-ui:2.1.2')
 	compile('cglib:cglib-nodep:3.2.0')
@@ -60,22 +61,23 @@ dependencies {
 	compile('org.thymeleaf:thymeleaf-spring4')
 	compile('in.ashwanthkumar:slack-java-webhook:0.0.7')
 	compile('org.apache.httpcomponents:httpclient:4.5.2')
-	compile('org.ethereum:ethereumj-core:1.1.0-RELEASE') {
-		exclude group: "org.slf4j", module: "slf4j-log4j12"
-	}
+    compile('org.ethereum:ethereumj-core:1.3.1-RELEASE') {
+        exclude group: "org.slf4j", module: "slf4j-log4j12"
+    }
 	compile('com.google.protobuf:protobuf-java:3.2.0')
 	compile('com.googlecode.protobuf-java-format:protobuf-java-format:1.4')
 	compile "mysql:mysql-connector-java:6.0.6"
 	compile('org.flywaydb:flyway-core:4.0.1')
 	compile('com.google.protobuf:protobuf-java:3.2.0')
 	compile('com.googlecode.protobuf-java-format:protobuf-java-format:1.4')
+    compile('com.github.cryptofiat:euro2-payment-uri:2.2') {
+        exclude group: "org.slf4j", module: "slf4j-simple"
+    }
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile("org.spockframework:spock-spring:1.0-groovy-2.4")
     testCompile('org.springframework.cloud:spring-cloud-contract-wiremock')
     testCompile('com.github.tomakehurst:wiremock-standalone:2.4.1')
-
-    compile group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.12'
 }
 
 dependencyManagement {
@@ -117,4 +119,3 @@ idea {
         sourceDirs += file("${protobuf.generatedFilesBaseDir}/main/java");
     }
 }
-
