--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -25,6 +25,7 @@ flyway:
     continue-on-error: false
     test-on-borrow: true
     validation-query: SELECT 1
+    locations: classpath:db/migration
 
 ethereum:
   node:
@@ -81,6 +82,18 @@ fixed:
 ---
 spring:
   profiles: test
+  datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL;INIT=RUNSCRIPT FROM 'classpath:db/h2/init_h2.sql';
+    username:
+    password:
+    driver-class-name: org.h2.Driver
+    platform: h2
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    hibernate:
+      ddl-auto: create
 
 ethereum:
   node:
