--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -33,13 +33,13 @@ ethereum:
 
 sponsor:
   ethereum:
-    address: 0x8664e7a68809238d8f8e78e4b7c723282533a787
-#   address: 0xdbf25a870895fe608f6ce5830d8c13a5598b060e
-#   address: 0x31c0ec79c3b14ff86673d0fa92c260b42ff14437
+    address: "0x8664e7a68809238d8f8e78e4b7c723282533a787"
+#   address: "0xdbf25a870895fe608f6ce5830d8c13a5598b060e"
+#   address: "0x31c0ec79c3b14ff86673d0fa92c260b42ff14437"
 
 contract:
   ethereum:
-    address: 0xa10a263D4336E4466502b2889D27D04582a86663
+    address: "0xa10a263D4336E4466502b2889D27D04582a86663"
     block: 0x241B13
 
 email:
