add linking detail, remove convoluted deploy shell script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,5 +52,5 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no wallet-server@wallet.euro2.ee /bin/mkdir /opt/wallet-server/builds/"${CIRCLE_BUILD_NUM}"
               scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -r  build/libs/* wallet-server@wallet.euro2.ee:/opt/wallet-server/builds/"${CIRCLE_BUILD_NUM}"/
-              ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no wallet-server@wallet.euro2.ee /bin/sh /opt/wallet-server/wallet-server-deploy.sh
+              ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no wallet-server@wallet.euro2.ee cd /opt/wallet-server; /bin/ln -s builds/"${CIRCLE_BUILD_NUM}"/*.jar wallet-server-latest.jar
             fi
