--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -69,6 +69,8 @@ fixed:
 ---
 spring:
   profiles: dev
+  datasource:
+    url: jdbc:mysql://localhost:33061/wallet_server_db?characterEncoding=UTF-8&useLegacyDatetimeCode=false&serverTimezone=UTC
 ethereum:
   node:
     url: http://localhost:8545
@@ -82,7 +84,7 @@ flyway:
   user: wallet-service
   password: q1w2e3r4
   datasource:
-    url: jdbc:mysql://localhost:3306/wallet_server_db?characterEncoding=UTF-8&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:33061/wallet_server_db?characterEncoding=UTF-8&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: wallet-service
     password: q1w2e3r4
     driver-class-name: com.mysql.cj.jdbc.Driver
