--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,10 @@ dependencies {
     compile('org.ethereum:ethereumj-core:1.3.1-RELEASE') {
         exclude group: "org.slf4j", module: "slf4j-log4j12"
     }
-	compile "mysql:mysql-connector-java:6.0.6"
+
+	runtime('org.postgresql:postgresql:9.4.1212')
+
+//	compile "mysql:mysql-connector-java:6.0.6"
 	compile('org.flywaydb:flyway-core:4.0.1')
     compile('com.github.cryptofiat:euro2-payment-uri:2.2') {
         exclude group: "org.slf4j", module: "slf4j-simple"
